// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`# Create 1`] = `
<div>
  <Component
    user={Object {}}
  />
  <div>
    <form
      className="form"
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="questionText"
        >
          Question Text
        </label>
        <input
          className="form-control"
          id="questionText"
          placeholder="place your text..."
          type="text"
        />
      </div>
      <div
        className="form-group"
      >
        <label
          htmlFor="expirationDate"
        >
          Expiration Date
        </label>
        <input
          className="form-control"
          id="expirationDate"
          type="date"
        />
      </div>
      <div
        className="form-group"
      >
        <button
          className="btn btn-default"
          id="createBTN"
          onClick={[Function]}
          type="submit"
        >
          Create new question
        </button>
      </div>
    </form>
  </div>
</div>
`;

exports[`# Create Warraper 1`] = `
<Create
  doAddQuestion={[Function]}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [Function],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  storeSubscription={
    Subscription {
      "listeners": Object {
        "notify": [Function],
      },
      "onStateChange": [Function],
      "parentSub": undefined,
      "store": Object {
        "clearActions": [Function],
        "dispatch": [Function],
        "getActions": [Function],
        "getState": [Function],
        "replaceReducer": [Function],
        "subscribe": [Function],
      },
      "unsubscribe": null,
    }
  }
  user={Object {}}
/>
`;

exports[`# doAddQuestion 1`] = `
<div>
  <Component
    user={
      Object {
        "id": "0",
        "login": "test",
        "registrationDate": "2017-05-07T10:22:37.364Z",
      }
    }
  />
  <div>
    <form
      className="form"
    >
      <div
        className="form-group"
      >
        <label
          htmlFor="questionText"
        >
          Question Text
        </label>
        <input
          className="form-control"
          id="questionText"
          placeholder="place your text..."
          type="text"
        />
      </div>
      <div
        className="form-group"
      >
        <label
          htmlFor="expirationDate"
        >
          Expiration Date
        </label>
        <input
          className="form-control"
          id="expirationDate"
          type="date"
        />
      </div>
      <div
        className="form-group"
      >
        <button
          className="btn btn-default"
          id="createBTN"
          onClick={[Function]}
          type="submit"
        >
          Create new question
        </button>
      </div>
    </form>
  </div>
</div>
`;
